syntax = "proto3";
package POGOProtos.Networking.Responses;

import public "Data/CaptureScore.proto";

message CatchPokemonResponse {
  POGOProtos.Networking.Responses.CatchPokemonResponse.CatchStatus status = 1;
  double miss_percent = 2;
  uint64 captured_pokemon_id = 3;
  POGOProtos.Data.CaptureScore scores = 4;

  enum CatchStatus {
    CATCH_ERROR = 0;
    CATCH_SUCCESS = 1;
    CATCH_ESCAPE = 2;
    CATCH_FLEE = 3;
    CATCH_MISSED = 4;
  }
}